# easy-git

./: Cargo.toml  easy-git.config.toml  install.sh
.fleet/: run.json
.github/workflows/: rust.yml
src/: commands.rs  config.rs  exec.rs  main.rs  util.rs  version.rs
