[package]
name = "easy-git"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
inquire = "0.6.2"
serde = { version = "1.0.163", features = ["derive"] }
# serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
